# yumic-server

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo-sources.json  install.sh  uninstall.sh
.aur/: PKGBUILD
.flatpak/builder/: com.github.Excez0.yumic.json
.github/workflows/: release.yml
assets/: yumic.desktop
src/: audio.rs  backend.rs  config.rs  main.rs  meter.rs  tray.rs  ui.rs
