[package]
name = "yumic-server"
version = "1.0.2"
edition = "2021"
description = "YuMic - Linux microphone server with GTK4 UI"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "signal", "process", "macros"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_4"] }
glib = { version = "0.20", features = ["v2_80"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
socket2 = "0.5"
opus = "0.3"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
ksni = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
